--- a/data/stories.yml
+++ b/data/stories.yml
@@ -170,3 +170,14 @@ stories:
    steps:
    - intent: informar_servicios
    - action: utter_respuesta_informar_servicios
+   
+ - story: interactive_story_1
+   steps:
+   - intent: materia
+   - action: utter_ask_matricula
+   - intent: matricula
+     entities:
+      - matricula: '66031'
+   - slot_was_set:
+      - matricula: '66031'
+   - action: action_materia
